--- a/app/VirtualChef/src/app/ingredients/ingredients.page.html
+++ b/app/VirtualChef/src/app/ingredients/ingredients.page.html
@@ -2,8 +2,55 @@
   <ion-toolbar>
     <ion-title>Ingredients</ion-title>
   </ion-toolbar>
+
+  <ion-toolbar>
+      <ion-searchbar></ion-searchbar>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
+<ion-list>
+  <ion-item>
+    <ion-label>Pokémon Yellow</ion-label>
+    <ion-checkbox slot="end"></ion-checkbox>
+  </ion-item>
+  <ion-item>
+    <ion-label>Mega Man X</ion-label>
+    <ion-checkbox slot="end"></ion-checkbox>
+  </ion-item>
+  <ion-item>
+    <ion-label>The Legend of Zelda</ion-label>
+    <ion-checkbox slot="end"></ion-checkbox>
+  </ion-item>
+  <ion-item>
+    <ion-label>Pac-Man</ion-label>
+    <ion-checkbox slot="end"></ion-checkbox>
+  </ion-item>
+  <ion-item>
+    <ion-label>Super Mario World</ion-label>
+    <ion-checkbox slot="end"></ion-checkbox>
+  </ion-item>
+  <ion-item>
+      <ion-label>Pokémon Yellow</ion-label>
+      <ion-checkbox slot="end"></ion-checkbox>
+    </ion-item>
+    <ion-item>
+      <ion-label>Mega Man X</ion-label>
+      <ion-checkbox slot="end"></ion-checkbox>
+    </ion-item>
+    <ion-item>
+      <ion-label>The Legend of Zelda</ion-label>
+      <ion-checkbox slot="end"></ion-checkbox>
+    </ion-item>
+    <ion-item>
+      <ion-label>Pac-Man</ion-label>
+      <ion-checkbox slot="end"></ion-checkbox>
+    </ion-item>
+    <ion-item>
+      <ion-label>Super Mario World</ion-label>
+      <ion-checkbox slot="end"></ion-checkbox>
+    </ion-item>
+</ion-list>
+
 
 </ion-content>
