--- a/app/VirtualChef/src/app/ingredients/ingredients.page.html
+++ b/app/VirtualChef/src/app/ingredients/ingredients.page.html
@@ -1,8 +1,11 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>Ingredients</ion-title>
+    <ion-buttons slot="end">
+        <ion-button><ion-icon name="basket" slot="icon-only"></ion-icon></ion-button>       
+        <ion-back-button></ion-back-button>    
+      </ion-buttons>
   </ion-toolbar>
-
   <ion-toolbar>
       <ion-searchbar></ion-searchbar>
     </ion-toolbar>
@@ -11,43 +14,43 @@
 <ion-content>
 <ion-list>
   <ion-item>
-    <ion-label>Pokémon Yellow</ion-label>
+    <ion-label>Tomato</ion-label>
     <ion-checkbox slot="end"></ion-checkbox>
   </ion-item>
   <ion-item>
-    <ion-label>Mega Man X</ion-label>
+    <ion-label>Cucumber</ion-label>
     <ion-checkbox slot="end"></ion-checkbox>
   </ion-item>
   <ion-item>
-    <ion-label>The Legend of Zelda</ion-label>
+    <ion-label>Apple</ion-label>
     <ion-checkbox slot="end"></ion-checkbox>
   </ion-item>
   <ion-item>
-    <ion-label>Pac-Man</ion-label>
+    <ion-label>Soy Milk</ion-label>
     <ion-checkbox slot="end"></ion-checkbox>
   </ion-item>
   <ion-item>
-    <ion-label>Super Mario World</ion-label>
+    <ion-label>Potato</ion-label>
     <ion-checkbox slot="end"></ion-checkbox>
   </ion-item>
   <ion-item>
-      <ion-label>Pokémon Yellow</ion-label>
+      <ion-label>Rice</ion-label>
       <ion-checkbox slot="end"></ion-checkbox>
     </ion-item>
     <ion-item>
-      <ion-label>Mega Man X</ion-label>
+      <ion-label>Mango</ion-label>
       <ion-checkbox slot="end"></ion-checkbox>
     </ion-item>
     <ion-item>
-      <ion-label>The Legend of Zelda</ion-label>
+      <ion-label>Lettuce</ion-label>
       <ion-checkbox slot="end"></ion-checkbox>
     </ion-item>
     <ion-item>
-      <ion-label>Pac-Man</ion-label>
+      <ion-label>Carrot</ion-label>
       <ion-checkbox slot="end"></ion-checkbox>
     </ion-item>
     <ion-item>
-      <ion-label>Super Mario World</ion-label>
+      <ion-label>Cheese</ion-label>
       <ion-checkbox slot="end"></ion-checkbox>
     </ion-item>
 </ion-list>
