--- a/app/VirtualChef/src/app/home/home.page.html
+++ b/app/VirtualChef/src/app/home/home.page.html
@@ -6,93 +6,76 @@
     <ion-title>
       Categories
     </ion-title>
+    <ion-buttons slot="end">
+      <ion-button><ion-icon name="basket" slot="icon-only"></ion-icon></ion-button>       
+    </ion-buttons>
   </ion-toolbar>
+  <ion-toolbar>
+      <ion-searchbar></ion-searchbar>   
+    </ion-toolbar>    
 </ion-header>
 
 <ion-content>
-    <ion-searchbar></ion-searchbar>
-    <ion-card class="welcome-card">
-      <img src="/assets/shapes.svg" alt="" />
-      <ion-card-header>
-        <ion-card-subtitle>Get Started</ion-card-subtitle>
-        <ion-card-title>Welcome to Ionic</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
-      </ion-card-content>
-    </ion-card>
-    
-    <ion-card>
-  <ion-card-header>
-    <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
-    <ion-card-title>Card Title</ion-card-title>
-  </ion-card-header>
+    <ion-grid>
+        <ion-row>
+          <ion-col size="6"> 
+            <ion-card>
+            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimg1.cookinglight.timeinc.net%2Fsites%2Fdefault%2Ffiles%2Fstyles%2F4_3_horizontal_-_1200x900%2Fpublic%2F1502826406%2F1708w-getty-fruit-closeup-CarstenSchanter-EyeEm.jpg%3Fitok%3DXFE9vQPZ&w=400&c=sc&poi=face&q=85">
+            <ion-card-header>
+            Fruits
+            </ion-card-header>
+            <ion-card-content></ion-card-content>
+          </ion-card></ion-col>
+      
+          <ion-col size="6">
+            <ion-card>
+              <img src="https://img.webmd.com/dtmcms/live/webmd/consumer_assets/site_images/articles/health_tools/12_powerhouse_vegetables_slideshow/intro_cream_of_crop.jpg">
+              <ion-card-header>
+              Vegatables
+              </ion-card-header>
+              <ion-card-content></ion-card-content>
+            </ion-card></ion-col>
 
-  <ion-card-content>
-    Keep close to Nature's heart... and break clear away, once in awhile,
-    and climb a mountain or spend a week in the woods. Wash your spirit clean.
-  </ion-card-content>
-</ion-card>
+            <ion-col size="6"> 
+                <ion-card>
+                <img src="http://www.bamco.com/content/uploads/2019/07/iStock-857308908_red-and-white-meat_970y546.jpg">
+                <ion-card-header>
+                Meat
+                </ion-card-header>
+                <ion-card-content>All assorted meat types</ion-card-content>
+              </ion-card></ion-col>
+              
+              <ion-col size="6"> 
+                  <ion-card>
+                  <img src="https://cdn-prod.medicalnewstoday.com/content/images/articles/323/323073/dairy-products.jpg">
+                  <ion-card-header>
+                   Dairy
+                 </ion-card-header>
+                 <ion-card-content>All processed,fresh and long lasting dairy products</ion-card-content>
+                </ion-card></ion-col>
 
-<ion-card>
-  <ion-item>
-    <ion-icon name="pin" slot="start"></ion-icon>
-    <ion-label>ion-item in a card, icon left, button right</ion-label>
-    <ion-button fill="outline" slot="end">View</ion-button>
-  </ion-item>
+                <ion-col size="6"> 
+                    <ion-card>
+                    <img src="https://healthy-kids.com.au/wp-content/uploads/2013/12/ComplexCarbohydrateFamily.jpg">
+                    <ion-card-header>
+                     Grains
+                   </ion-card-header>
+                   <ion-card-content></ion-card-content>
+                  </ion-card></ion-col> 
 
-  <ion-card-content>
-    This is content, without any paragraph or header tags,
-    within an ion-card-content element.
-  </ion-card-content>
-</ion-card>
-
-<ion-card>
-  <ion-item href="#" class="activated">
-    <ion-icon name="wifi" slot="start"></ion-icon>
-    <ion-label>Card Link Item 1 .activated</ion-label>
-  </ion-item>
-
-  <ion-item href="#">
-    <ion-icon name="wine" slot="start"></ion-icon>
-    <ion-label>Card Link Item 2</ion-label>
-  </ion-item>
-
-  <ion-item class="activated">
-    <ion-icon name="warning" slot="start"></ion-icon>
-    <ion-label>Card Button Item 1 .activated</ion-label>
-  </ion-item>
-
-  <ion-item>
-    <ion-icon name="walk" slot="start"></ion-icon>
-    <ion-label>Card Button Item 2</ion-label>
-  </ion-item>
-</ion-card>
-
-
-    <ion-list lines="none">
-      <ion-list-header>
-        <ion-label>Resources</ion-label>
-      </ion-list-header>
-      <ion-item href="https://ionicframework.com/docs/">
-        <ion-icon slot="start" color="medium" name="book"></ion-icon>
-        <ion-label>Ionic Documentation</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/building/scaffolding">
-        <ion-icon slot="start" color="medium" name="build"></ion-icon>
-        <ion-label>Scaffold Out Your App</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/layout/structure">
-        <ion-icon slot="start" color="medium" name="grid"></ion-icon>
-        <ion-label>Change Your App Layout</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/theming/basics">
-        <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
-        <ion-label>Theme Your App</ion-label>
-      </ion-item>
-    </ion-list>
+                  <ion-col size="6"> 
+                      <ion-card>
+                      <img src="https://cdn.shopify.com/s/files/1/0018/8327/5325/products/extra-large-fruit-basket-17808120902_1024x1024_65bf56f6-2c03-499c-99a7-abc237641f14_1024x1024.jpg?v=1528874366">
+                      <ion-card-header>
+                       Oils,Fats and Sweets
+                     </ion-card-header>
+                     <ion-card-content></ion-card-content>
+                    </ion-card></ion-col>
+        </ion-row>
+     </ion-grid> 
 </ion-content>
-<ion-tabs>
+
+<!--<ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="Home">
       <ion-icon name="Home"></ion-icon>
@@ -108,7 +91,5 @@
       <ion-icon name="Settings"></ion-icon>
       <ion-label>Settings</ion-label>
     </ion-tab-button>
-
-  
   </ion-tab-bar>
-</ion-tabs>
+</ion-tabs> -->
