--- a/app/VirtualChef/src/app/home/home.page.html
+++ b/app/VirtualChef/src/app/home/home.page.html
@@ -7,7 +7,7 @@
       Categories
     </ion-title>
     <ion-buttons slot="end">
-      <ion-button>
+      <ion-button (click)="goToBasket()">
         <ion-icon name="basket" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
