--- a/app/VirtualChef/src/app/ingredients/ingredients.page.html
+++ b/app/VirtualChef/src/app/ingredients/ingredients.page.html
@@ -1,10 +1,12 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons>
+        <ion-back-button slot="start"></ion-back-button>
+    </ion-buttons>
     <ion-title>Ingredients</ion-title>
     <ion-buttons slot="end">
-        <ion-button><ion-icon name="basket" slot="icon-only"></ion-icon></ion-button>       
-        <ion-back-button></ion-back-button>    
-      </ion-buttons>
+        <ion-button><ion-icon name="basket" slot="icon-only"></ion-icon></ion-button>           
+    </ion-buttons>
   </ion-toolbar>
   <ion-toolbar>
       <ion-searchbar></ion-searchbar>
