--- a/app/VirtualChef/src/app/ingredients/ingredients.page.html
+++ b/app/VirtualChef/src/app/ingredients/ingredients.page.html
@@ -5,7 +5,7 @@
     </ion-buttons>
     <ion-title>Ingredients</ion-title>
     <ion-buttons slot="end">
-        <ion-button><ion-icon name="basket" slot="icon-only"></ion-icon></ion-button>           
+        <ion-button (click)="goToBasket()"><ion-icon name="basket" slot="icon-only"></ion-icon></ion-button>           
     </ion-buttons>
   </ion-toolbar>
   <ion-toolbar>
